src/pages/Home/Home.css
* {
    padding: 0;
    margin: 0;
    font-family: poppins, "sans-serif";
}

.containerSpeaker {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.speakerPhotoRow {
    display: flex;
    margin-bottom: 30px;
    flex-wrap: wrap;
    flex-basis: 100%;
    justify-content: space-evenly;
    max-width: 80vw;
}

.speakerPhotoRow a img {
    width: 100%;
}

.speakerPhotoRow img {
    border-radius: 15% 0 15% 0;
    cursor: pointer;
    display: block;
}


.sideWale {
    display: flex;
    justify-content: space-evenly;
}



nav .container {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.container {
    width: 80vw;
}

.sideElement a {
    text-decoration: none;
    color: black;
    font-weight: 600;
}

.main {
    transition: background 2s ease-in-out;
}

.main .registrations {
    padding: 5px;
    margin-top: 5px;
    color: white;
    background-color: rgb(0, 0, 0, 0.55);
}

.conferceInfoMain {
    padding: 25px 10px;
    width: 80%;
    background-color: rgb(0, 0, 0, 0.55);
    color: white;
}

.conferceInfoMain span {
    font-size: 20px;
}

#conferenceNameSpanMain {
    font-size: 25px;
}

#conferenceNameSpanMain h3 {
    font-family: "Raleway", sans-serif;
}

/* .datesMain {
    font-weight: bold;
} */

.locationMain a {
    text-decoration: none;
    color: white;
    cursor: pointer;
}

.locationMain a:hover {
    text-decoration: none;
    color: black;
    cursor: pointer;
}

.launchTime {
    display: flex;
    margin-top: 10px;
    background-color: rgb(0, 0, 0, 0.55);
    padding: 25px;
    color: white;
}

.launchTimeSingleBlock {
    margin: 0px 20px;
}

.launchTimeSingleBlock p {
    font-size: 30px;
}

#partners {
    width: 80vw;
    margin: auto;
    display: flex;
    margin-top: 13vh;
    margin-bottom: 5vh;
}

.organisingPartners,
.sponsorPartners {
    flex: 1;
    display: flex;
}

.organisingPartner img,
.sponsorPartner img {
    width: 85%;
}

.organisingPartner , .sponsorPartner{
        box-shadow: 0 0 35px 10px rgba(0, 0, 0, 0.1);
        border-radius: 15px;
        margin: 10px;
}

.orgyPartner {
    text-align: center;
    font-size: 1.5rem;
    color: #443f3f;
}

.orgyPartner h3 {
    margin-bottom: 5vh;
}



#contact {
    background: url("../../../public/images/Backgrounds/bg-pattern-3.jpg");
    background-repeat: repeat;
    height: 35vh;
    display: flex;
    align-items: center;
    padding: 40px;
    justify-content: center;
}


.contactContainer {
    text-align: center;
}

.joinUs {
    display: flex;
    margin: 20px 0px;
    flex-direction: column;
    align-items: center;
}

.joinUsContainer {
    max-width: 80vw;
    margin: auto;
    text-align: center;
}

.joinUsContainerRow {
    margin-top: 20px;
    display: flex;
    text-align: center;
    justify-content: space-around;
    flex-wrap: wrap;
}

.CFP {
    background: url("../../../public/images/Backgrounds/bg-pattern-3.jpg");
    max-width: 25%;
    min-width: 20%;
    padding: 25px;
    border-radius: 25px;
    display: flex;
    flex-direction: column;
}

.CFP button {
    margin-top: 10px;
    align-items: flex-end;
    cursor: pointer;
}

footer {
    height: 10vh;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #000;
    color: #fff;
}

@media only screen and (max-width: 900px) and (min-width: 600px){
    #partners {
        display: flex;
        flex-direction: column;
    }
}



@media only screen and (max-width: 600px) {
    #partners {
            display: flex;
            flex-direction: column;
        }

    .organisingPartners, .sponsorPartners {
        flex-direction: column;
    }

    .speakerPhotoRow {
        flex-direction: column;
    }

    .joinUsContainerRow {
        flex-direction: column;
    }
    .joinUsContainerRow * {
        margin: auto;
        max-width: 70%;
        min-width: 50%;
    }

}

